[package]
name = "pro_bot"
version = "0.1.0"
authors = ["user <andypythonappdeveloper@gmail.com>"]
edition = "2018"


[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { version = "0.9.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "collector", "http", "cache"]}
ansi_term = "0.12.1"
ron = "0.6.2"
serde = "1.0.117"
lazy_static = "1.4.0"
rand = "0.7.3"
firebase-rs = "1.0.3"
